Including instructions on how to replicate issue

--- a/apps/pane/resources/templates/pane.handlebars
+++ b/apps/pane/resources/templates/pane.handlebars
@@ -1,3 +1,15 @@
+<h1>Instructions</h1>
+<div>&nbsp;</div>
+<ol>
+<li>1. Click 'Pane Me!' below</li>
+<li>2. Observe empty ListView in the SheetPane</li>
+<li>3. Click on ListView to observe 3 empty (but selectable) rows</li>
+<li>4. Click 'Cancel'</li>
+<li>5. Observe populated ListView in the SheetPane</li>
+</ol>
+<div>&nbsp;</div>
+<p>Q: why is the ListView empty initially? How can I populate it first time round?</p>
+<div>&nbsp;</div>
 {{#view SC.Button target="Pane.statechart" action="showPane"}}
-	Pane Me!
+	<strong>Pane Me!</strong>
 {{/view}}
